  
  * when on Plone 3, use LargeFolder as basic class for AddressBook.
    Please note that on Plone 3 **this change is not compatible with older
    versions** [keul]

  * The "state" field not try to load states of the current selected country. Also,
    default country will be the one taken from the context language or global portal
    language [keul]

1.4.4
-----

  * Removed the "default-skin" from the uninstall profile
    for skins (Fix: #4) [frapell]

  * Fixed a crash when entering the advanced search 
    (Fix: #7) [frapell]

  * Added css rule so subsectors wouldn't get smashed down when
    editing an address book in a small window [frapell]

  * Fixed crash when no subsector was loaded (Fix: #5) [frapell]

  * Added italian translation [fdelia]

1.4.3
-----

  * Fixing an old bug with vocabularies returning ValueError: too many values
    to unpack [flecox]

1.4.2
-----

  * Changed the name of the views [flecox]

  * [bugfix] "Export all" was redirecting to a view instead of
    exporting. Now exports ok [flecox]

  * [bugfix] Sectors and subsectors gets duplicates removed when
    adding/editing an Address Book. [frapell]

  * Fixed use of deprecated zcml directive "vocabulary". see
    http://wiki.zope.org/zope3/ReducingTheAmountOfZCMLDirectives [thet]

  * Removed "default-skin" directive from skins.xml [thet]

  * Fixed XHTML validation for several templates. [emanuel]

  * Depend on newer version of ATExtensions. [frapell]

  * Fixed testing infrastructure which was outdated. [emanuel, frapell]

1.4.1
-----

  * Changed the skin layers, now the product will not add his own Skin to
    portal_skins, but instead it will add its layer to all of them and use
    "Plone Default".

1.4.0
-----

  * Added a customize view so it's possible to select which columns are shown
    or not.

  * Removed the "Import organizations or persons" from the groups view, since
    it was misleading.
