@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <version>1500</version>
+  <dependencies>
+    <dependency>profile-Products.ATExtensions:default</dependency>
+  </dependencies>
 </metadata>
