@@ -7,7 +7,7 @@ from setuptools import setup, find_packages
 def read(*rnames):
     return open(os.path.join(os.path.dirname(__file__), *rnames)).read()
 
-version = '1.5.0-rt1'
+version = '1.5.0-rt2'
 
 long_description = (
     read('docs', 'README-en.txt')
